# effects-examples

./: .gitignore  .ocamlformat  .travis-ocaml.sh  .travis.sh  .travis.yml  LICENSE  Makefile  README.md  aio.ml  algorithmic_differentiation.ml  clone_is_tricky.ml  concurrent.ml  delimcc.ml  delimcc_paper_example.ml  dune  dune-project  dyn_wind.ml  dynamic_state.ml  effects-examples.opam  effects-examples.opam.template  eratosthenes.ml  fringe.ml  generator.ml  loop.ml  memo.ml  nim.ml  nondeterminism.ml  pipes.ml  promises.ml  queens.ml  ref.ml  reify_reflect.ml  reverse_mode_ad.ml  sched.ml  sched.mli  state.ml  transaction.ml
.github/workflows/: ci.yml
aio/: Makefile  aio.ml  aio.mli  dune  echo.ml
callbacks/: Makefile  bar.ml  dune  foo.c
lib/: dune  effppl.ml  hmc.ml  primitive.ml  printers.ml
lib/models/discrete_models/: coins.ml  dune
lib/models/eval/: dune  lin10.ml
lib/models/sampling/: cont_sampling.ml  exp_sampling.ml  normal_sampling.ml
lib/models/time-series/: autoreg.py  moving_avg.ml  moving_avg.py
multishot/: clone_is_tricky.ml  delimcc.ml  delimcc_paper_example.ml  dune  dynamic_state.ml  memo.ml  nim.ml  nondeterminism.ml  queens.ml
mvar/: MVar.ml  MVar.mli  MVar_monad.ml  MVar_monad.mli  MVar_test.ml  Makefile  chameneos.hs  chameneos.ml  chameneos_lwt.ml  chameneos_monad.ml  chameneos_systhr.ml  concurrent_monad.ml  dune  sched.ml  sched.mli  sched_monad.ml  sched_monad.mli
ppl/lib/: dune-project  effppl.opam  helpers.ml
ppl/lib/models/: dune  scratch.ml
ppl/lib/models/eval/: lin2.ml  lin20.ml  lin30.ml  lin40.ml  lin5.ml  linreg.py
ppl/lib/models/machine-learning/: classification.ml  dune  linreg.ml
ppl/lib/models/sampling/: beta_sampling.ml  chi2_sampling.ml  dune
ppl/lib/models/time-series/: autoreg.ml  dune
ppl/lib/models/truncated_and_missing_data/: dune  missing.ml  truncated.ml  truncated.py
ppl/results/: a.py
ppl/results/discrete-models/: coin_weights.txt
ppl/results/machine_learning/: linreg.py  linreg_cons.txt  slope1.txt
ppl/results/sampling/: a.py  cont_samples.txt  exp_samples.txt  sum_of_normals_sampling.txt
ppl/results/time-series/: autoreg_alpha.txt
ppl/results/trundated_and_missing_data/: lower_bound.txt  upper_bound.txt
ppl/stan/: results.txt
reports/final_report/: main.tex  mybib.bib
reports/preliminary _report/: Major_project_proposal.tex  sample.bib
results/discrete-models/: coin_weights2.txt
results/machine_learning/: classification.py  linreg_slopes.txt  slope2.txt
results/sampling/: beta_samples_(1,1).txt  beta_samples_(1,2).txt  beta_samples_(2,1).txt  chi2_samples.txt
results/time-series/: autoreg_alpha_2.txt  autoreg_beta.txt
results/trundated_and_missing_data/: mean.txt  stdev.txt
stan/: autoreg.py  linreg.py
