(dirs aio)

(executables
 (names concurrent)
 (modules sched concurrent))

(executables
 (names state)
 (modules state))

(executables
 (names ref)
 (modules ref))

(executables
 (names transaction)
 (modules transaction))

(executables
 (names delimcc)
 (modules delimcc))

(executables
 (names dyn_wind)
 (modules dyn_wind))

(executables
 (names generator)
 (modules generator))

(executables
 (names promises)
 (modules promises))

(executables
 (names queens)
 (modules queens))

(executables
 (names reify_reflect)
 (modules reify_reflect))

(executables
 (names memo)
 (modules memo))

(executables
 (names nondeterminism)
 (modules nondeterminism))

(executables
 (names nim)
 (modules nim))

(executables
 (names eratosthenes)
 (modules eratosthenes))

(executables
 (names pipes)
 (modules pipes))

(executables
 (names loop)
 (modules loop))

(executables
 (names clone_is_tricky)
 (modules clone_is_tricky))

(executables
 (names fringe)
 (modules fringe))

(executables
 (names algorithmic_differentiation)
 (modules algorithmic_differentiation))

