(env
 (dev
  (flags
   (:standard -w -50 -w -32 -w -27))))

(executables
 (names concurrent)
 (modules sched concurrent))

(executables
 (names ref)
 (modules state ref))

(executables
 (names transaction)
 (modules transaction))

(executables
 (names dyn_wind)
 (modules dyn_wind))

(executables
 (names dynamic_state)
 (modules dynamic_state))

(executables
 (names generator)
 (modules generator))

(executables
 (names promises)
 (modules promises))

(executables
 (names reify_reflect)
 (modules reify_reflect))

(executables
 (names eratosthenes)
 (modules eratosthenes))

(executables
 (names pipes)
 (modules pipes))

(executables
 (names loop)
 (modules loop))

(executables
 (names fringe)
 (modules fringe))

(executables
 (names algorithmic_differentiation)
 (modules algorithmic_differentiation))
