(executables
 (names memo)
 (modules memo)
 (libraries multicont))

(executables
 (names nondeterminism)
 (modules nondeterminism)
 (libraries multicont))

(executables
 (names nim)
 (modules nim)
 (libraries multicont))

(executables
 (names queens)
 (modules queens)
 (libraries multicont))

(executables
 (names clone_is_tricky)
 (modules clone_is_tricky)
 (libraries multicont))

(executables
 (names delimcc)
 (modules delimcc)
 (libraries multicont))

(executables
 (names dynamic_state)
 (modules dynamic_state)
 (libraries multicont))
